# rust-floria

./: Cargo.toml  README.md  TODO
assets/wit/: floria-plugins.wit
crates/sdk/: Cargo.toml
crates/sdk/src/: bindings.rs  errors.rs  lib.rs
crates/sdk/src/data/: entity.rs  id.rs  kind.rs  mod.rs  namespace.rs  site.rs
crates/sdk/src/data/normal/: conversions.rs  delegated.rs  list.rs  map.rs  mod.rs  utils.rs  value.rs
crates/sdk/src/host/: api.rs  conversions.rs  mod.rs  value.rs
crates/sdk/src/macros/: literal.rs
crates/sdk/src/normal/: conversions.rs  delegated.rs  list.rs  map.rs  mod.rs  utils.rs  value.rs
scripts/: build-docs
sdk/: Cargo.toml
sdk/src/: bindings.rs  errors.rs  lib.rs
sdk/src/data/: directory.rs  entity.rs  id.rs  kind.rs  mod.rs  prefix.rs  property.rs  scope.rs  site.rs
sdk/src/data/any/: any.rs  call.rs  conversions.rs  delegated.rs  list.rs  map.rs  mod.rs  utils.rs
sdk/src/data/any/macros/: literal.rs  mod.rs  traversal.rs
sdk/src/host/: api.rs  conversions.rs  mod.rs
sdk/src/macros/: literal.rs  traversal.rs
