[workspace]
resolver = "3"
members = ["library", "sdk"]

[patch.crates-io]
compris = { path = "../rust-compris/library" }
kutil = { path = "../rust-kutil/library" }
kutil-cli-macros = { path = "../rust-kutil/cli-macros" }
kutil-std-macros = { path = "../rust-kutil/std-macros" }

[profile.release]
# Especially important for wasm!
strip = "debuginfo"
lto = "thin"        # true is *very* slow to build!
