[package]
edition = "2024"

name = "floria-plugin-sdk"
description = "Floria plugin SDK"
version = "0.0.1"
rust-version = "1.85"

license = "MIT OR Apache-2.0"
repository = "https://github.com/tliron/rust-floria"
documentation = "https://docs.rs/floria"
authors = ["Tal Liron"]

readme = "../../README.md"

categories = [] # https://crates.io/category_slugs
keywords = [
    "cloud",
    "orchestration",
    "wasm",
    "tosca",
    "floria",
    "puccini",
    "khutulun",
]

[dependencies]
duplicate = "2.0.0"
ordered-float = "5.0.0"
wit-bindgen = "0.40.0"
